@@ -1,3 +1,6 @@
+2003-03-04	fabian
+    * Fixed a bug in screen update
+    
 2003-03-03	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
     * Fixed a bug in changing forground and background color 
